# ChristmanMediaInstaller

./: .gitignore  CHRISTMAN_MEDIA_INSTALLER_SPEC.md  INSTALL_THIS_UPDATE.md  README.md  pyproject.toml
CMI_hardened/christman_media_installer/: __init__.py  cli.py  constants.py  detector.py  explorer.py  logger_shim.py  media_installer_tools.py  truth_report.py  truth_report_template.txt  verifier.py
christman_media_installer/: christman_ear_canal.py  cli.py  constants.py  installer.py  isolation_vault.py  repair_packet.py  security.py  shim_engine.py  targets.py  truth_report.py  verifier.py
