[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "christman-media-installer"
version = "1.0.0"
description = "One installer. Every being gets ears, voice, sight, tone, phonemes, and truth."
authors = [
    { name = "Everett Nathaniel Christman", email = "everett@christmanaiproject.com" }
]
readme = "README.md"
license = { text = "Proprietary — The Christman AI Project" }
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pymupdf>=1.23.0",
]

[project.scripts]
christman-media = "christman_media_installer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["christman_media_installer*"]
